Disable ERROR logging for the valid case in app list sync service.

This changes ERROR logging to VERBOSE logging case, which is actually
valid. This should reduce noise in users' feedbacks.

BUG=701039
TEST=Manually, detected cases causing such error message.

Review-Url: https://codereview.chromium.org/2754413002
Cr-Commit-Position: refs/heads/master@{#457902}

Former-commit-id: 1852c3e4976e2ac0473350f8aa4589e753926934